--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <header></header>
   <div class="container">
       
-        <button class="btn btn-danger btn-lg" id="executeButton">Search</button>
+        <button class="btn btn-success btn-lg" id="executeButton">Search</button>
       
   </div>
 </body>
