--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,18 @@
     <div id="outputListing1DaysOnMarket"></div>
     <!-- test div -->
     <div id="result"></div>
+
+    <div id="image-search-results" class="carousel slide" data-interval="false" data-ride="carousel">
+      <div class="carousel-inner"></div>
+      <a class="carousel-control-prev" href="#image-search-results" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#image-search-results" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </div>
 </body>
 </html>
