final commit for the day.
Co-authored-by: Forrest Reiland <freiland@email.arizona.edu>

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,15 @@
       
       </ul>
     </div>
-    <div id="showListings"></div>
+    <div id="show-listing">
+      <p>The rent for this address is: <span class="price"></span></p>
+      <p>This listing is  <span class="days-old"></span> days old.</p>
+      <p>This address has <span class="bedrooms"></span> bedrooms and <span class="bathrooms"></span> bathrooms.</p>
+      <p>This address is classified as a(n): <span class="unit-type"></span></p>
+      <p>The correlation index for this address to your search criteria is: <span class="correlation"></span></p>
+      <div id="buttons">
+      </div>
+    </div>
   </div>
 </body>
 </html>
