added an if statement to an element to show and hide.
Co-authored-by: Grant Eadie <grantleadie@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
       </div>
     </div>
   </div>
+  <div id="outputListing1Bathrooms"></div>
+    <div id="outputListing1SquareFootage"></div>
   <!-- </div> -->
 
   <!-- MAIN INDEX UI -->
